--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,123 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+
+
+* {
+	font-family: Roboto;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.app {
+	width: 500px;
+	height: 500px;
+	margin: 0 auto;
 }
+
+
+/* APP HEADER STYLES */
+.app-header {
+	display: flex;
+	align-items: center;
+	color: white;
+	background-color: #424242; /* darkgrey */
+	height: 60px;
+	width: 100%;
+	justify-content: space-between;
+}
+
+.app-header__title {
+	align-self: center flex-start;
+	font-size: 18px;
+	font-weight: bold;
+	margin-left: 16px;
+}
+
+.app-header__counter {
+	align-self: center flex-end;
+	background-color: white;
+	color: black;
+	font-size: 14px;
+	padding: 4px 8px;
+	border-radius: 4px;
+	margin-right: 16px;
+}
+
+.app-header__counter.max {
+	background-color: #FF6F00; /* orange */
+}
+
+/* APP PROFILE STYLES */
+.app-content {
+	width: 100%;
+	height: calc(100% - 120px);
+	display: flex;
+	align-items: center;
+	text-align: center;
+	justify-content: center;
+}
+
+.app-content__profile {
+	display: block;
+	color: #000;
+}
+
+.app-content__profile.hidden {
+	display: none;
+}
+
+.app-content__profile-image img {
+	width: 128px;
+	height: 128px;
+	border-radius: 64px;
+}
+
+.app-content__profile-name {
+	text-transform: capitalize;
+	font-size: 32px;
+}
+
+.app-content__profile-age {
+	font-size: 14px;
+}
+
+.app-content__loader {
+	display: none;
+}
+
+.app-content__loader.active {
+	display: block;
+}
+
+/* APP ACTION STYLES */
+.app-action {
+	display: flex;
+	align-items: center;
+	height: 60px;
+}
+
+.app-action__no, 
+.app-action__yes {
+	height: 100%;
+	width: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	font-weight: bold;
+	font-size: 18px;
+	cursor: pointer;
+}
+
+.app-action__no {
+	color: white;
+	background-color: #424242; /* darkgrey */
+}
+
+.app-action__yes {
+	color: white;
+	background-color: #FF6F00; /* orange */
+}
+
+.app-action .disabled {
+	color: #757575; /* lightgrey */
+	background-color: #424242; /* darkgrey */
+}
+
